git-svn-id: http://svn.silkstreamhosting.co.uk/svn/TOOLS/js-page-blend/trunk@9375 55df44b1-a43f-421f-89b5-6258b5dffb04

--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,7 @@
 - Document title now fully changes
 - Added all parents data attributes check
 - Changes to how it gets
+- Changes to better support error handling
 
 === 1.0.0 ===
 - Creation
