git-svn-id: http://svn.silkstreamhosting.co.uk/svn/TOOLS/js-page-blend/trunk@9381 55df44b1-a43f-421f-89b5-6258b5dffb04

--- a/history.txt
+++ b/history.txt
@@ -4,6 +4,7 @@
 - Added all parents data attributes check
 - Changes to how it gets
 - Changes to better support error handling
+- No longer tries to apply to anchor urls that start with "javascript:" or "#"
 
 === 1.0.0 ===
 - Creation
