--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,7 @@
 === 1.0.2 ===
 - Added popstate event listener for client back and forward use
 - Can now modify the target property on before change
+- Changed .clear to .uninitiate
 
 === 1.0.1 ===
 - Changed replaceState to pushState (support back button)
