git-svn-id: http://svn.silkstreamhosting.co.uk/svn/TOOLS/js-page-blend/trunk@9404 55df44b1-a43f-421f-89b5-6258b5dffb04

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+=== 1.0.3 ===
+- Fixed issue with first load page not being a part of history state
+- Can now chain functions apart from .process()
+
 === 1.0.2 ===
 - Added popstate event listener for client back and forward use
 - Can now modify the target property on before change
