git-svn-id: http://svn.silkstreamhosting.co.uk/svn/TOOLS/js-page-blend/trunk@9484 55df44b1-a43f-421f-89b5-6258b5dffb04

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+=== 1.0.4 ===
+- Fixed target parameter was not working
+- Added fallback for process function in case history API is not supported
+
 === 1.0.3 ===
 - Fixed issue with first load page not being a part of history state
 - Can now chain functions apart from .process()
