--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+=== 1.0.5 ===
+- Added new setting: default_target. Specify jQuery selector string for the default target.
+- Changed .process() parameters to .process(url,method,params,target,push).
+
 === 1.0.4 ===
 - Fixed target parameter was not working
 - Added fallback for process function in case history API is not supported
